--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 # 2. config.build.yml
 # 3. config.yml
 
-name: website
+name: Andrew Laskey
 description: My web portfolio and blog
 author:
   name: Andrew Laskey
