--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ url: http://andrewlaskey.com
 
 # Grunt handles images and assets.
 exclude: ['img', 'css', 'js', 'fonts',
-          '**.png', '**.jpg', '**.jpeg', '**.gif', '**.webp', '**.svg', '**.ico']
+          '**.png', '**.jpg', '**.jpeg', '**.gif', '**.webp', '**.svg', '**.ico', 'node_modules', '*.scss']
 
 include: ['.htaccess']
 
